# Test_application

./: .coverage  .gitignore  README.md  application.py  pyproject.toml  test.py  test_CLI_gurevich.py  test_application.py  z.py
htmlcov/: application_py.html  index.html  status.json  test_application_py.html
