[tool.poetry]
name = "Test_application"
version = "0.1.0"
description = ""
authors = ["Kseniya"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
coverage = "^6.5.0"
requests = "^2.28.1"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"